# civic-query

./: .gitignore  Dockerfile  README.md  docker-compose-ollama.build.yml  pyproject.toml  requirements.txt
civic_query/: app.py  rag_agent.py  utils.py
